# DFMY-RType

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  CPPLINT.cfg  Jenkinsfile  LICENSE  Makefile  README.md  r-type.rc  r-type_client_tests  r-type_server_tests  vcpkg.json
client/: CMakeLists.txt  dependencies.cmake  main.cpp
client/assets/shaders/: deuteranopia.frag  normal.frag  protanopia.frag  tritanopia.frag
client/src/: CMakeLists.txt  foo.cpp  foo.hpp
client/src/app/: App.cpp  App.hpp  CMakeLists.txt  app.cpp  app.hpp  my_scene.cpp  my_scene.hpp  my_scene_2.cpp  my_scene_2.hpp
client/src/app/scenes/: menu.cpp  menu.hpp
client/src/bases/: CMakeLists.txt  scene_base.hpp  scene_base.tpp
client/src/bases/systems/: events_system_base.hpp  (+1 more)
client/src/builder/: CMakeLists.txt  resources.cpp  resources.hpp  scenes.cpp  scenes.hpp  services.cpp  services.hpp  settings.cpp  settings.hpp
client/src/components/: CMakeLists.txt  drawable.hpp  on_event.hpp  position.hpp  radio.cpp  radio.hpp  select.hpp  server_entity_id.hpp
client/src/constants/: CMakeLists.txt  chat.hpp  game.hpp  settings.hpp  user.hpp  window.hpp
client/src/context/: CMakeLists.txt  global.hpp  global_context.hpp
client/src/game/: CMakeLists.txt  keymap.cpp  keymap.hpp
client/src/interfaces/: CMakeLists.txt  scene_interface.hpp
client/src/managers/: CMakeLists.txt  game_manager.cpp  game_manager.hpp  resources_manager.cpp  resources_manager.hpp  scenes_manager.hpp  scenes_manager.tpp  server_connection_manager.cpp  server_connection_manager.hpp  sound_manager.cpp  sound_manager.hpp  window_manager.cpp  window_manager.hpp
client/src/scenes/: CMakeLists.txt  end.cpp  end.hpp  game.cpp  game.hpp  leaderboard.cpp  leaderboard.hpp  lobby.cpp  lobby.hpp  menu.cpp  menu.hpp  register.cpp  register.hpp  scene_base.cpp  scene_base.hpp  scene_base.tpp  scene_interface.hpp  scenes_manager.cpp  scenes_manager.hpp  scenes_manager.tpp  settings.cpp  settings.hpp
client/src/services/: CMakeLists.txt  rooms_service.cpp  rooms_service.hpp  server_connection_service.cpp  server_connection_service.hpp
client/src/systems/: CMakeLists.txt  background.cpp  background.hpp  blink.cpp  blink.hpp  drawable.cpp  drawable.hpp  drawable_system.cpp  drawable_system.hpp  player.cpp  player.hpp
client/src/ui/: CMakeLists.txt  input.cpp  input.hpp
client/src/utils/: CMakeLists.txt  symbols.hpp  time.hpp  timer.cpp  timer.hpp
client/src/window/: CMakeLists.txt  window_manager.cpp  window_manager.hpp
client/tests/: CMakeLists.txt
client/tests/utils/: CMakeLists.txt  foo_tests.cpp
example/: CMakeLists.txt  main.cpp
example/src/: CMakeLists.txt
example/src/scenes/: CMakeLists.txt  game.cpp  game.hpp
example/src/systems/: CMakeLists.txt  move.cpp  move.hpp  obstacles.cpp  obstacles.hpp
libs/ECS/: CMakeLists.txt  README.md
libs/ECS/src/: CMakeLists.txt  entity.cpp  entity.hpp  registry.cpp  registry.hpp  registry.tpp  system_abstract.hpp  system_abstract.tpp  system_interface.hpp
libs/ECS/tests/: CMakeLists.txt  registry_test.cpp  system_test.cpp
libs/abra/: CMakeLists.txt  README.md  dependencies.cmake
libs/abra/includes/: CMakeLists.txt  database.hpp  network.hpp  packet.hpp
libs/abra/src/: CMakeLists.txt  core.hpp
libs/abra/tests/: CMakeLists.txt
libs/api_common/: CMakeLists.txt  README.md  dependencies.cmake
libs/api_common/src/: CMakeLists.txt  api.hpp
libs/game/: CMakeLists.txt  README.md  dependencies.cmake
libs/game/includes/: CMakeLists.txt  api.hpp  components.hpp  constants.hpp  stats.hpp  types.hpp  utils.hpp
libs/game/src/: CMakeLists.txt  api.hpp  core.hpp  dummy.cpp
libs/game/tests/: CMakeLists.txt  master_test.cpp
libs/game_core/: CMakeLists.txt
libs/game_core/src/: CMakeLists.txt  api.hpp
libs/game_stats/: CMakeLists.txt  README.md
libs/game_stats/src/: CMakeLists.txt  api.hpp
libs/game_types/: CMakeLists.txt
libs/game_types/src/: CMakeLists.txt  api.hpp  dummy.cpp  weapons.hpp
libs/mew/: CMakeLists.txt  dependencies.cmake
libs/mew/include/: CMakeLists.txt  api.hpp
libs/mew/src/: CMakeLists.txt  foo.cpp  foo.hpp
libs/mew/tests/: CMakeLists.txt  tests.cpp
libs/network/: CMakeLists.txt  README.md
libs/network/src/: CMakeLists.txt  api.hpp  network.cpp  network.hpp
libs/network/tests/: CMakeLists.txt
libs/porygon/: CMakeLists.txt  README.md
libs/porygon/src/: CMakeLists.txt  api.h  handler.cpp  handler.hpp  handler.tpp
libs/porygon/tests/: CMakeLists.txt  tests_handler.cpp
libs/utils/: CMakeLists.txt  README.md
libs/utils/src/: CMakeLists.txt  api.hpp
libs/zygarde/: CMakeLists.txt  dependencies.cmake
libs/zygarde/includes/: CMakeLists.txt  components.hpp
libs/zygarde/src/: CMakeLists.txt  api.hpp  entity.cpp  entity.hpp  entity.tpp  registry.cpp  registry.hpp  registry.tpp  system_abstract.cpp  system_abstract.hpp  system_abstract.tpp  system_interface.hpp
libs/zygarde/tests/: CMakeLists.txt  registry_test.cpp  system_test.cpp
server/: .env  CMakeLists.txt  commands.cmake  dependencies.cmake  game.schema.sql  main.cpp  master-config  master-config.rtype-cfg  node-main-config.rtype-cfg
server/game_files/difficulties/: default.json  easy.json  hard.json  insane.json  medium.json
server/game_files/levels/: creature_cave.json  the_den.json  tutorial.json
server/src/: CMakeLists.txt  context.hpp  foo.cpp  foo.hpp  server_types.cpp  server_types.hpp
server/src/allocator/: CMakeLists.txt  allocator.cpp  allocator.hpp
server/src/app/: CMakeLists.txt  app.cpp  app.hpp  context.cpp  context.hpp
server/src/apps/: CMakeLists.txt  context.hpp  runner.cpp  runner.hpp  server_interface.hpp
server/src/cli/: CMakeLists.txt  cli.cpp  cli.hpp
server/src/config/: CMakeLists.txt  config.cpp  config.hpp  config.tpp
server/src/env/: CMakeLists.txt  env.cpp  env.hpp  env.tpp
server/src/lobby/: CMakeLists.txt  lobby.cpp  lobby.hpp  props.hpp
server/src/options/: CMakeLists.txt  options.cpp  options.hpp
server/tests/: CMakeLists.txt
server/tests/utils/: CMakeLists.txt  foo_tests.cpp
(+910 files in other folders)
